--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,7 @@
 $light-color: #f4f4f4;
 $font-stack: Arial, Helvetica, sans-serif;
+$primary-color: #0e6cff;
+$secondary-color: #ff8700;
 
 * {
     box-sizing: border-box;
@@ -11,4 +13,9 @@ body {
     background-color: $light-color;
     font-family: $font-stack;
     line-height: 1.6;
+}
+.showcase {
+    background-color: $pr;
+    color: #fff;
+    height: 600px;
 }
