--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,26 @@
-/* Error: Undefined variable.
- *    ,
- * 18 |     background-color: $pr;
- *    |                       ^^^
- *    '
- *   scss/style.scss 18:23  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a    \2577 \a 18 \2502      background-color: $pr;\a    \2502                        ^^^\a    \2575 \a   scss/style.scss 18:23  root stylesheet";
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
+
+body {
+  background-color: #f4f4f4;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.6;
+}
+
+.showcase {
+  background-color: #0e6cff;
+  color: #fff;
+  height: 600px;
+}
+
+.container {
+  max-width: 1100px;
+  padding: 0 30px;
+  margin: 0 auto;
+  overflow: auto;
+}
+
+/*# sourceMappingURL=style.css.map */
