--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,7 +15,14 @@ body {
     line-height: 1.6;
 }
 .showcase {
-    background-color: $pr;
+    background-color: $primary-color;
     color: #fff;
     height: 600px;
+}
+.container {
+    max-width:1100px;
+    padding: 0 30px;
+    margin: 0 auto;
+    overflow: auto;
+
 }
