--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,6 +27,14 @@ img {
         display: flex;
         align-items: center;
         justify-content: space-between;
+
+        ul {
+            display: flex;
+            list-style-type: none;
+        }
+        li {
+            padding: 15px;
+        }
     }
 }
 .container {
