--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,17 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
+/* Error: expected "{".
+ *    ,
+ * 50 |     &-content
+ *    |              ^
+ *    '
+ *   scss/style.scss 50:14  root stylesheet */
 
-body {
-  background-color: #f4f4f4;
-  font-family: Arial, Helvetica, sans-serif;
-  line-height: 1.6;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: 'Error: expected "{".\a    \2577 \a 50 \2502      &-content\a    \2502               ^\a    \2575 \a   scss/style.scss 50:14  root stylesheet';
 }
-
-img {
-  width: 100%;
-}
-
-.showcase {
-  background-color: #0e6cff;
-  color: #fff;
-  height: 600px;
-}
-.showcase nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.showcase nav ul {
-  display: flex;
-  list-style-type: none;
-}
-.showcase nav li {
-  padding: 15px;
-}
-
-.container {
-  max-width: 1100px;
-  padding: 0 30px;
-  margin: 0 auto;
-  overflow: auto;
-}
-
-/*# sourceMappingURL=style.css.map */
