--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,7 @@ $font-stack: Arial, Helvetica, sans-serif;
 $primary-color: #0e6cff;
 $secondary-color: #ff8700;
 
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -17,6 +18,9 @@ body {
 img {
     width: 100%;
 }
+ a {
+    text-decoration: none; 
+ }
 
 .showcase {
     background-color: $primary-color;
@@ -35,12 +39,19 @@ img {
         li {
             padding: 15px;
         }
+        a:hover {
+            color:$secondary-color;
+        }
     }
+    a {
+        color: #fff;
+    }
+    // & = .showcase instead of repeating it
+    &-content
 }
 .container {
     max-width:1100px;
     padding: 0 30px;
     margin: 0 auto;
     overflow: auto;
-
 }
