--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,4 @@
-$light-color: #f4f4f4;
-$font-stack: Arial, Helvetica, sans-serif;
-$primary-color: #0e6cff;
-$secondary-color: #ff8700;
+@import 'config';
 
 
 * {
@@ -47,7 +44,25 @@ img {
         color: #fff;
     }
     // & = .showcase instead of repeating it
-    &-content
+    &-content {
+        height: 100%;
+        display: flex;
+        align-items:center;
+        justify-content: center;
+
+        img {
+            width: 50%;
+        }
+
+        h1 {
+            font-size: 50px;
+            line-height: 1.2;
+        }
+        p {
+            margin: 20px 0;
+        }
+    
+    }
 }
 .container {
     max-width:1100px;
