moved .container into its own _utilities

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,4 +1,4 @@
 $light-color: #f4f4f4;
 $font-stack: Arial, Helvetica, sans-serif;
-$primary-color: #0e6cff;
+$primary-color: teal;
 $secondary-color: #ff8700;
