--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+.container {
+  max-width: 1100px;
+  padding: 0 30px;
+  margin: 0 auto;
+  overflow: auto;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -19,7 +26,7 @@ a {
 }
 
 .showcase {
-  background-color: #0e6cff;
+  background-color: teal;
   color: #fff;
   height: 600px;
 }
@@ -56,13 +63,6 @@ a {
 }
 .showcase-content p {
   margin: 20px 0;
-}
-
-.container {
-  max-width: 1100px;
-  padding: 0 30px;
-  margin: 0 auto;
-  overflow: auto;
 }
 
 /*# sourceMappingURL=style.css.map */
