--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @import 'config';
+@import 'utilities';
 
 
 * {
@@ -63,10 +64,4 @@ img {
         }
     
     }
-}
-.container {
-    max-width:1100px;
-    padding: 0 30px;
-    margin: 0 auto;
-    overflow: auto;
 }
