--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,4 +1,15 @@
 $light-color: #f4f4f4;
 $font-stack: Arial, Helvetica, sans-serif;
-$primary-color: teal;
+//$primary-color: teal;
 $secondary-color: #ff8700;
+$primary-color: #e0ffff;
+
+// set text color based on background
+
+@function set-text-color($color) {
+    @if(lightness($color) > 70) {
+        @return #333;
+    } @else {
+        @return #fff;
+    }
+}
