--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,8 @@
 
 .btn-primary {
   background-color: white;
+  background-color: white;
+  color: #333;
 }
 
 .btn-secondary {
@@ -60,11 +62,11 @@ a {
 .showcase nav li {
   padding: 15px;
 }
+.showcase nav a {
+  color: #333;
+}
 .showcase nav a:hover {
   color: #ff8700;
-}
-.showcase a {
-  color: #fff;
 }
 .showcase-content {
   height: 100%;
