--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -13,6 +13,7 @@
 .btn-primary {
     @extend %btn;
     background-color: lighten($primary-color, 10%);
+    @include set-background(lighten($primary-color, 10%))
 }
 
 .btn-secondary {
