--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,8 +22,7 @@ img {
  }
 
 .showcase {
-    background-color: $primary-color;
-    color: set-text-color($primary-color);
+    @include set-background($primary-color);
     height: 600px;
 
     nav {
@@ -38,13 +37,14 @@ img {
         li {
             padding: 15px;
         }
+        a {
+            color: set-text-color($primary-color);
+        }
         a:hover {
             color:$secondary-color;
         }
     }
-    a {
-        color: #fff;
-    }
+  
     // & = .showcase instead of repeating it
     &-content {
         height: 100%;
