--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,83 @@
+.m-1 {
+  margin: 1rem;
+}
+
+.my-1 {
+  margin: 1rem 0;
+}
+
+.p-1 {
+  padding: 1rem;
+}
+
+.py-1 {
+  padding: 1rem;
+}
+
+.m-2 {
+  margin: 2rem;
+}
+
+.my-2 {
+  margin: 2rem 0;
+}
+
+.p-2 {
+  padding: 2rem;
+}
+
+.py-2 {
+  padding: 2rem;
+}
+
+.m-3 {
+  margin: 3rem;
+}
+
+.my-3 {
+  margin: 3rem 0;
+}
+
+.p-3 {
+  padding: 3rem;
+}
+
+.py-3 {
+  padding: 3rem;
+}
+
+.m-4 {
+  margin: 4rem;
+}
+
+.my-4 {
+  margin: 4rem 0;
+}
+
+.p-4 {
+  padding: 4rem;
+}
+
+.py-4 {
+  padding: 4rem;
+}
+
+.m-5 {
+  margin: 5rem;
+}
+
+.my-5 {
+  margin: 5rem 0;
+}
+
+.p-5 {
+  padding: 5rem;
+}
+
+.py-5 {
+  padding: 5rem;
+}
+
 .container {
   max-width: 1100px;
   padding: 0 30px;
@@ -16,9 +96,9 @@
 }
 
 .btn-primary {
-  background-color: white;
-  background-color: white;
-  color: #333;
+  background-color: #00b3b3;
+  background-color: #00b3b3;
+  color: #fff;
 }
 
 .btn-secondary {
@@ -46,8 +126,8 @@ a {
 }
 
 .showcase {
-  background-color: #e0ffff;
-  color: #333;
+  background-color: teal;
+  color: #fff;
   height: 600px;
 }
 .showcase nav {
@@ -63,7 +143,7 @@ a {
   padding: 15px;
 }
 .showcase nav a {
-  color: #333;
+  color: #fff;
 }
 .showcase nav a:hover {
   color: #ff8700;
@@ -80,9 +160,6 @@ a {
 .showcase-content h1 {
   font-size: 50px;
   line-height: 1.2;
-}
-.showcase-content p {
-  margin: 20px 0;
 }
 
 /*# sourceMappingURL=style.css.map */
