--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,8 +1,8 @@
 $light-color: #f4f4f4;
 $font-stack: Arial, Helvetica, sans-serif;
-// $primary-color: teal;
+$primary-color: teal;
 $secondary-color: #ff8700;
-$primary-color: #e0ffff;
+// $primary-color: #e0ffff;
 
 // set text color based on background
 
@@ -18,4 +18,22 @@ $primary-color: #e0ffff;
 @mixin set-background($color) {
     background-color: $color;
     color: set-text-color($color);
+}
+
+// Margin and patting classes
+$spaceamounts: (1,2,3,4,5);
+
+@each $space in $spaceamounts {
+    .m-#{$space} {
+       margin: #{$space}rem; 
+    }
+    .my-#{$space} {
+        margin: #{$space}rem 0; 
+     }
+     .p-#{$space} {
+        padding: #{$space}rem; 
+     }
+     .py-#{$space} {
+        padding: #{$space}rem; 
+     }
 }
