--- a/scss/style.scss
+++ b/scss/style.scss
@@ -50,6 +50,7 @@ img {
         display: flex;
         align-items:center;
         justify-content: center;
+        margin-top: 30px;
 
         img {
             width: 50%;
